[metadata]
name = django-dysession
version = 0.0.1
description = django-dysession is a django extension by using AWS DynamoDB as a session backend
long_description = file:README.md
keywords = "django,session,aws,dynamodb"
url = https://github.com/MissterHao/django-dysession
download_url = "https://pypi.org/project/django-dysession/"
author = "Hao-Wei, Li"
author_email = "henryliking@gmail.com"
maintainer = "MissterHao"
maintainer_email = "henryliking@gmail.com"
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Internet :: WWW/HTTP :: Session
    Topic :: Security

[options]
packages=find:
include_package_data = true
python_requires = >=3.6
setup_requires =
    setuptools >= 38.3.0
install_requires =
    Django>=3.2