[metadata]
name = django-dysession
version = file: dysession/version.txt
description = "django-dysession is a django extension which integrated AWS DynamoDB as a session backend"
long_description = file: README.md
long_description_content_type = "text/markdown"
keywords = "django,session,aws,dynamodb"
url = "https://github.com/MissterHao/django-dysession/"
download_url = "https://github.com/MissterHao/django-dysession/"
author = "Hao-Wei, Li"
author_email = "henryliking@gmail.com"
maintainer = "MissterHao"
maintainer_email = "henryliking@gmail.com"
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: Implementation
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Internet :: WWW/HTTP :: Session
    Topic :: Security
    Topic :: Database

[options]
packages=find:
include_package_data = true
python_requires = >=3.6
setup_requires =
    setuptools >= 38.3.0
install_requires =
    Django>=3.2
    boto3>=1.26.59